--- a/crt_portal/static/sass/custom/header.scss
+++ b/crt_portal/static/sass/custom/header.scss
@@ -10,6 +10,7 @@
   }
 
   .title {
+    @include add-knockout-font-smoothing;
     font-size: 2.8125rem;
     font-weight: 400;
     line-height: 3.75rem;
